--- a/EntregaFinal(Heladeria)Coria/index.html
+++ b/EntregaFinal(Heladeria)Coria/index.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Market Sop</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <title>Heladeria del  centro</title>
+    <style>
+      body{
+        background-color: rgb(18, 243, 255);
+      }
+    </style>
   </head>
   <body>
     <!--navBar-->
     <div class="nav-container">
       <nav class="navbar">
-        <h1 class="navbar-logo">Shop.</h1>
+        <a href="#" class="w3-bar-item w3-button" >HOME</a>
         <h1 class="ver-carrito" id="verCarrito">🛒<span id="cantidadCarrito" class="cantidad-carrito"></span></h1>
       </nav>
     </div>
@@ -19,8 +26,8 @@
     <!--banner-->
     <div class="banner">
       <div class="banner-container">
-        <h1>SuperMarket Shop</h1>
-        <p>the best place to do your shopping</p>
+        <h1>HELADERIA DEL CENTRO</h1>
+        <p>los mejores helados de la ciudad</p>
       </div>
     </div>
 
@@ -30,8 +37,10 @@
     <!--modal container-->
     <div id="modal-container" class="modal-container"></div>
 
-    <script src="/JS/productos.js"></script>
+    
+    
     <script src="/JS/main.js"></script>
     <script src="/JS/Carrito.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
